// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders SecondaryMenu non-visible 1`] = `
<div
  className="sc-bczRLJ lnSqPL"
>
  <div
    className="sc-gsnTZi boSiKo"
  >
    <div
      className="sc-eCYdqJ jsZDLx"
      onClick={[Function]}
    >
      <svg
        fill="none"
        height={24}
        stroke="#39a5dc"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <polyline
          points="12 8 8 12 12 16"
        />
        <line
          x1="16"
          x2="8"
          y1="12"
          y2="12"
        />
      </svg>
    </div>
    <span
      className="sc-dkzDqf emvapn"
    >
      Secondary Menu
    </span>
  </div>
  <ul
    className="sc-hKMtZM iFxPqB"
  />
</div>
`;

exports[`renders SecondaryMenu visible 1`] = `
<div
  className="sc-bczRLJ iHxZAb"
>
  <div
    className="sc-gsnTZi boSiKo"
  >
    <div
      className="sc-eCYdqJ jsZDLx"
      onClick={[Function]}
    >
      <svg
        fill="none"
        height={24}
        stroke="#39a5dc"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <polyline
          points="12 8 8 12 12 16"
        />
        <line
          x1="16"
          x2="8"
          y1="12"
          y2="12"
        />
      </svg>
    </div>
    <span
      className="sc-dkzDqf emvapn"
    >
      Secondary Menu
    </span>
  </div>
  <ul
    className="sc-hKMtZM iFxPqB"
  />
</div>
`;
